# geep-shared-python

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  docker-compose.yml  otel-collector-config.yml  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/workflows/: ci_pipeline.yml  docker-release-version.yml
docs/: geep_python_developers_guide.md
geep_shared_python/api_operations/: api_operations.py  api_operations.pyi  dialogue_service_client.py  dialogue_service_client.pyi  exceptions.py  exceptions.pyi
geep_shared_python/auth/: auth.py  auth.pyi
geep_shared_python/database/: database.py  database.pyi  db_crud.py  db_crud.pyi
geep_shared_python/logging/: log_config.py  log_config.pyi  tracing_utils.py
geep_shared_python/schemas/: dialogue_service.py  dialogue_service.pyi  shared_schemas.py  shared_schemas.pyi
geep_shared_python/utils/: text_utils.py  text_utils.pyi
tests/: conftest.py  test_api_operations.py  test_auth.py  test_db_crud.py  test_log_config.py  test_text_utils.py
